<resources>
    <string name="app_name">InClass Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_homework">Homework</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_notice">Notice</string>
    <string name="menu_leaves">Leaves</string>
    <string name="menu_logout">Logout</string>
    <!--    Login   -->
    <string name="login">Login</string>
    <string name="login_tagline">and you can discover best news around the school </string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot Password</string>
    <string name="login_student">Student</string>
    <string name="login_parent">Parent</string>

    <!--    Profile     -->
    <string name="profile_admissionno">Admission Number</string>
    <string name="profile_admissiondate">Admission Date</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_bloodgroup">Blood Group</string>
    <string name="profile_religion">Religion</string>
    <string name="profile_caste">Caste</string>
    <string name="profile_presentadd">Present Address</string>
    <string name="profile_premadd">Premanant Address</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_phone">Mobile Number</string>
    <string name="profile_email">Email</string>
    <string name="profile_username">Username</string>
    <string name="profile_password">Password</string>
    <string name="profile_father">Father Name</string>
    <string name="profile_mother">Mother Name</string>
    <string name="profile_primaryph">Primary Contact</string>
    <string name="profile_secondaryph">Secondary Contact</string>
    <string name="profile_fatheroccup">Father Occupation</string>
    <string name="profile_motheroccup">Mother Occupation</string>
    <string name="profile_address">Address</string>

    <!--    Home Work   -->
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="nohomework">No Homework Available</string>
    <string name="hm_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently withdesktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="leavetypesetting">Leave Type</string>
    <string name="choosefilename">Choose File Name</string>
    <string name="choosefilebtn">Choose File</string>
    <string name="per_camera_and_write_storage">Please Grant Permissions to upload work image</string>
    <string name="valid_image">No image found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
