<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/applyleave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_large"
        android:scrollbars="vertical"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:text="@string/leavetypesetting"
                    android:textColor="@color/grey_40" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_border">

                    <Spinner
                        android:id="@+id/lt_type"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fromtime"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_round_bg"
                    android:focusable="false"
                    android:hint="From Date"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:minHeight="@dimen/spacing_xlarge" />

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/totime"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_round_bg"
                    android:focusable="false"
                    android:hint="To Date"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:minHeight="@dimen/spacing_xlarge" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <EditText
                android:id="@+id/leavedesc"
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg"
                android:gravity="start"
                android:hint="Description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/choosefilename" />

                <View
                    android:layout_width="@dimen/spacing_xxxlarge"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/choose_file"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:background="@drawable/btn_rounded_green_300"
                    android:text="@string/choosefilebtn"
                    android:textColor="@color/overlay_light_90"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large" />

            <Button
                android:id="@+id/apply_btn"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="bottom"
                android:text="Apply"
                android:background="@color/colorPrimary"
                android:textColor="@color/overlay_light_90"
                android:textStyle="bold"
                android:textSize="18dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>